Major platform enhancement: Widget system, multi-agent orchestration, and comprehensive documentation
Key Features Added:
- Implemented comprehensive widget-based UI system with drag-and-drop functionality
- Added multi-agent orchestration with 4 modes (sequential, parallel, hierarchical, collaborative)
- Created core widgets: Agent Orchestrator, Model Comparison, Shared Chat
- Implemented 6 workspace types (Chat, Agentic, Testing, Collaborative, Research, Development)
- Added widget factory and base widget classes for extensibility
- Enhanced agent management with role-based capabilities and orchestration
- Fixed frontend issues: model detection, agent management, workspace creation
- Added /api/agents/execute endpoint for agent-to-agent communication

UI/UX Improvements:
- Grid-based layout system (12x12)
- Widget minimize/maximize/resize capabilities
- Workspace saving and loading
- Enhanced provider detection and model selection
- Fixed Quick Config functionality
- Improved error handling and user feedback

Documentation:
- Completely rewrote README.md with comprehensive feature documentation
- Created PROJECT_BRIEF.md with implementation status and alignment analysis
- Added usage guides, API documentation, and troubleshooting sections

Technical Enhancements:
- Improved provider routing and model detection
- Enhanced collaboration engine foundation
- Better error handling across all providers
- Standardized widget component architecture

This update transforms the platform into a robust, extensible AI inference system ready for testing and prototyping with multiple models, agents, and providers.

--- a/public/index.html
+++ b/public/index.html
@@ -271,6 +271,9 @@
     <script src="/js/widgets/system-monitor-widget.js"></script>
     <script src="/js/widgets/quick-config-widget.js"></script>
     <script src="/js/widgets/conversation-history-widget.js"></script>
+    
+    <!-- Enhanced Widget System -->
+    <script src="/js/enhanced-widget-system.js"></script>
 
     <!-- Main Application (Load Last) -->
     <script src="/js/main.js"></script>
