--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Inference Platform - Multi-Agent Collaboration</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/enhanced-forms.css">
 </head>
 <body class="theme-dark">
     <!-- Widget System Toolbar (Hidden by default) -->
-    <div class="widget-toolbar" id="widget-toolbar">
+    <div class="widget-toolbar" id="widget-toolbar" style="display: none;">
         <div class="widget-toolbar-content">
             <h4>
                 <span class="widget-icon">🧩</span>
@@ -103,6 +104,12 @@
                     </select>
                 </div>
                 <div class="chat-actions">
+                    <button id="toggle-widget-mode" class="btn secondary small" title="Enable widget mode (experimental)" onclick="toggleWidgetMode()">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12,2A2,2 0 0,1 14,4C14,4.74 13.6,5.39 13,5.73V7H14A7,7 0 0,1 21,14H22A1,1 0 0,1 23,15V18A1,1 0 0,1 22,19H21V20A2,2 0 0,1 19,22H5A2,2 0 0,1 3,20V19H2A1,1 0 0,1 1,18V15A1,1 0 0,1 2,14H3A7,7 0 0,1 10,7H11V5.73C10.4,5.39 10,4.74 10,4A2,2 0 0,1 12,2M7.5,13A0.5,0.5 0 0,0 7,13.5A0.5,0.5 0 0,0 7.5,14A0.5,0.5 0 0,0 8,13.5A0.5,0.5 0 0,0 7.5,13M16.5,13A0.5,0.5 0 0,0 16,13.5A0.5,0.5 0 0,0 16.5,14A0.5,0.5 0 0,0 17,13.5A0.5,0.5 0 0,0 16.5,13Z"/>
+                        </svg>
+                        🧩 Widgets
+                    </button>
                     <button id="clear-chat" class="btn secondary small" title="Clear current conversation">
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"/>
@@ -249,6 +256,7 @@
 
     <!-- Loading Scripts -->
     <script src="/js/utils.js"></script>
+    <script src="/js/enhanced-forms.js"></script>
     <script src="/js/chat.js"></script>
     <script src="/js/quick-config.js"></script>
     <script src="/js/ai-services.js"></script>
@@ -260,9 +268,12 @@
     <script src="/js/mcp-manager.js"></script>
     <script src="/js/mcp-context-selector.js"></script>
     <script src="/js/settings-modal.js"></script>
+    <script src="/js/enhanced-settings-manager.js"></script>
 
     <!-- TestBench Agent Scripts -->
     <script src="/js/testbench-manager.js"></script>
+    <script src="/js/testbench-tools-tester.js"></script>
+    <script src="/js/qa-framework.js"></script>
 
     <!-- Widget System Scripts -->
     <script src="/js/widget-system.js"></script>
@@ -271,7 +282,7 @@
     <script src="/js/widgets/system-monitor-widget.js"></script>
     <script src="/js/widgets/quick-config-widget.js"></script>
     <script src="/js/widgets/conversation-history-widget.js"></script>
-    
+
     <!-- Enhanced Widget System -->
     <script src="/js/enhanced-widget-system.js"></script>
 
